@@ -23,6 +23,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23252:  Added support for writing ZIP files to unseekable streams.
+
 - Issue #21526: Tkinter now supports new boolean type in Tcl 8.5.
 
 - Issue #23647: Increase impalib's MAXLINE to accommodate modern mailbox sizes.
